[project]
name = "aic-sanctuary-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "ipkiruiYegon",email = "ipkiruig83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
